--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,4 +2,7 @@
 # JobBoard
 # by refractored
 #
-
+Database:
+  URL: "jdbc:mysql://localhost:3306/your_database_name"
+  Username: "your_username"
+  Password: "your_password"
