--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,13 @@ repositories {
 }
 
 dependencies {
-    compileOnly("com.willfp:eco:6.69.2")
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
     compileOnly "io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT"
+
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib"
+
+    // eco
+    compileOnly("com.willfp:eco:6.69.2")
 
     // Lamp (Commands)
     implementation "com.github.Revxrsal.Lamp:common:3.1.9"
@@ -41,6 +45,8 @@ dependencies {
     implementation "com.j256.ormlite:ormlite-core:5.6"
     implementation "com.j256.ormlite:ormlite-jdbc:5.6"
 
+    // Adventure
+    compileOnly("net.kyori:adventure-platform-bukkit:4.1.2")
 }
 
 def targetJavaVersion = 17
@@ -85,3 +91,5 @@ compileJava {
 shadowJar {
     relocate('kotlin', 'net.refractored.libs.kotlin')
 }
+
+build.dependsOn shadowJar
