--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,5 +1,6 @@
 name: JobBoard
 version: '${version}'
+authors: [refractored]
 main: net.refractored.jobboard.JobBoard
 api-version: '1.20'
 dependencies:
